cmake_minimum_required(VERSION 3.5)

project(Counting_inversions)
set (CMAKE_CXX_STANDARD 11)
include(CheckCXXCompilerFlag)
set(SOURCE Counting_inversions.cpp)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
aux_source_directory(. DIR_TOOT_SRCS)
set (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g")
add_executable(Counting_inversions Counting_inversions.cpp)